--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev src/index.ts",
     "start": "node build/index.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "env": "0.0.2",
     "express": "^4.18.2"
   }
 }
