--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/node": "^18.11.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
